fix: update z-index css variables

--- a/packages/components/src/sender/index.less
+++ b/packages/components/src/sender/index.less
@@ -377,7 +377,7 @@
     backdrop-filter: blur(54.37px);
     border-radius: 12px;
     box-shadow: 0 4px 12px 0px rgba(0, 0, 0, 0.04);
-    z-index: 1000;
+    z-index: var(--tr-z-index-dropdown);
 
     .upload-options {
       box-sizing: border-box;
